--- a/innovatex/src/app/components/navbar/navbar.component.html
+++ b/innovatex/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm px-3">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark shadow-sm px-3">
   <div class="container-fluid">
     <!-- LOGO -->
     <a class="navbar-brand d-flex align-items-center" href="#">
