--- a/innovatex/src/app/components/planes/planes.component.html
+++ b/innovatex/src/app/components/planes/planes.component.html
@@ -9,7 +9,7 @@
 <div class="py-5 bg-dark text-white">
 <ng-container id="planes" *ngIf="auth.user$ | async as user; else loginAlert">
   <div class="container py-5">
-  <div class="row justify-content-center">
+  <div class="row g-4 justify-content-center">
     <div *ngFor="let plan of planes" class="col-md-6 col-lg-4 d-flex">
       <div class="card mb-4 h-100 shadow-lg border-0 rounded-4 bg-gradient bg-opacity-10 bg-secondary text-white">
         <div class="card-body d-flex flex-column p-4">
